layout/generic/ColumnSetWrapperFrame.cpp
@@ -63,7 +63,20 @@ void ColumnSetWrapperFrame::AppendDirectlyOwnedAnonBoxes(
   // Thus, no need to restyle them. AssertColumnSpanWrapperSubtreeIsSane()
   // asserts all the conditions above which allow us to skip appending
   // -moz-column-span-wrappers.
-  nsIFrame* columnSet = PrincipalChildList().FirstChild();
+  auto FindFirstChildInChildLists = [this]() -> nsIFrame* {
+    const ChildListID listIDs[] = {kPrincipalList, kOverflowList};
+    for (nsIFrame* frag = this; frag; frag = frag->GetNextInFlow()) {
+      for (ChildListID id : listIDs) {
+        const nsFrameList& list = frag->GetChildList(id);
+        if (nsIFrame* firstChild = list.FirstChild()) {
+          return firstChild;
+        }
+      }
+    }
+    return nullptr;
+  };
+
+  nsIFrame* columnSet = FindFirstChildInChildLists();
   MOZ_ASSERT(columnSet && columnSet->IsColumnSetFrame(),
              "The first child should always be ColumnSet!");
   aResult.AppendElement(OwnedAnonBox(columnSet));
